--- a/proj3-1/index.html
+++ b/proj3-1/index.html
@@ -279,7 +279,7 @@ For indirect lighting we implemented multiple bounces for one point on an object
         </table>
     </div>
 
-    <p>https://cal-cs184-student.github.io/sp22-project-webpages-malits/proj3-1/index.html</p>
+    <p align="middle">https://cal-cs184-student.github.io/sp22-project-webpages-malits/proj3-1/index.html</p>
 
 </div>
 </body>
