--- a/proj3-2/index.html
+++ b/proj3-2/index.html
@@ -1,7 +1,142 @@
-<html>
-	<head>
-	</head>
-	<body>
-		Project 3-2 here
-	</body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+<style>
+    div.padded {
+      padding-top: 0px;
+      padding-right: 100px;
+      padding-bottom: 0.25in;
+      padding-left: 100px;
+    }
+  </style>
+<title>Max Litster & Aidan Meyer|  CS 184</title>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+</head>
+<body>
+<br />
+<h1 align="middle">Assignment 3-2: PathTracer Extension</h1>
+    <h2 align="middle">Max Litster & Aidan Meyer</h2>
+
+    <div class="padded">
+        <p>In this assingment we extended our pathtracer to account for Microfacet BSDFs, allowing us to render different, more realistic materials,
+          and different lens features to allow for richer lens effects. This was really cool because we got to reap the rewards of tricky implementations
+          in Part 3 by expanding on them with additional materials and lens effects. The rendered images turned out to be really realistic and cool!
+        <br><br>
+          The math was a bit more involved this time, which made implementation and derivation a little trickier. We definitely had some issues with
+          importance sampling for the Microfacet BSDF, as the different angles and vector formulas were difficult to wrap our heads around. It was also tricky
+          to visualize the ray-plane intersections needed to complete Part 4, but very rewarding once we did: the images were super cool!
+        </p>
+        <br><br>
+        <p>Aidan and I collaborated really well! We split up the work and checked in to review each other's code and explain our design decisions.
+          We debugged one another's code to pick up on things the other may have missed. As roommates, collaboration and time coordination is pretty easy.
+        </p>
+    <h2 align="middle">Part 2: Microfacet BSDF</h2>
+    First, note the effect of changing roughness (alpha): the lower the roughness, the more reflective the material. As it gets rougher (higher alpha), the reflectiveness
+    decreases.
+    <div align="center">
+        <table style="width=100%">
+            <tr>
+                <td align="middle">
+                <img src="images/dragon005.png" width="480px" />
+                <figcaption align="middle">alpha = 0.005</figcaption>
+            </tr>
+            <tr>
+              <td align="middle">
+              <img src="images/dragon05.png" width="480px" />
+              <figcaption align="middle">alpha = 0.05</figcaption>
+            </tr>
+            <tr>
+              <td align="middle">
+              <img src="images/dragon25.png" width="480px" />
+              <figcaption align="middle">alpha = 0.25</figcaption>
+            </tr>
+            <tr>
+              <td align="middle">
+              <img src="images/dragon5.png" width="480px" />
+              <figcaption align="middle">alpha = 0.5</figcaption>
+            </tr>
+        </table>
+    </div>
+    Differences between hemisphere sampling and importance sampling.
+    As you can see, hemisphere sampling is noisier while importance sampling
+    creates much more directed and realistic shading effects.
+    <div align="center">
+        <table style="width=100%">
+            <tr>
+                <td align="middle">
+                <img src="images/bunny_hemisphere.png" width="480px" />
+                <figcaption align="middle">Hemisphere Sampling</figcaption>
+            </tr>
+            <tr>
+              <td align="middle">
+              <img src="images/bunny_imp.png" width="480px" />
+              <figcaption align="middle">Importance Sampling</figcaption>
+            </tr>
+        </table>
+    </div>
+    <img align="middle" src="images/dragon_iron.png" width="480px" />
+    <figcaption align="middle">An example of rendering material with iron.</figcaption>
+
+
+    <h2 align="middle">Part 4:</h2>
+    A pinhole camera model treats the scene as viewed through a pinhole: where a direct ray is shot from a pixel on the screen to the objects
+    in scene, the intersections determining what we display. The thin-lens model introduces the effect of a curved lens, where we sample locations on
+    the glass surface and generate a reflected ray to simulate the visuals of a lens. Instead of a direct ray shooting from image space to scene,
+    we now reflect that ray through the curved surface of the lens. To compute this, we first use the pinhole ray-tracing procedure to identify
+    a point in the scene that our ray intersects. From there, we sample a location on the lens and generate a new ray from that point on the lens
+    to the intersection point in the scene. By using this lens as well as a ray generated at a pixel on the image
+    <div align="center">
+        <table style="width=100%">
+            <tr>
+                <td align="middle">
+                <img src="images/dragon1.png" width="480px" />
+                <figcaption align="middle">Depth 1</figcaption>
+            </tr>
+            <tr>
+              <td align="middle">
+              <img src="images/dragon2.png" width="480px" />
+              <figcaption align="middle">Depth 1.3</figcaption>
+            </tr>
+            <tr>
+              <td align="middle">
+              <img src="images/dragon3.png" width="480px" />
+              <figcaption align="middle">Depth 1.66</figcaption>
+            </tr>
+            <tr>
+              <td align="middle">
+              <img src="images/dragon4.png" width="480px" />
+              <figcaption align="middle">Depth 2</figcaption>
+            </tr>
+        </table>
+    </div>
+    Effects of different apertrue sizes
+    <div align="center">
+        <table style="width=100%">
+            <tr>
+                <td align="middle">
+                <img src="images/sphere1.png" width="480px" />
+                <figcaption align="middle">Aperture Size: .03</figcaption>
+            </tr>
+            <tr>
+              <td align="middle">
+              <img src="images/sphere2.png" width="480px" />
+              <figcaption align="middle">Size: 0.1</figcaption>
+            </tr>
+            <tr>
+              <td align="middle">
+              <img src="images/sphere3.png" width="480px" />
+              <figcaption align="middle">Size: 0.2</figcaption>
+            </tr>
+            <tr>
+              <td align="middle">
+              <img src="images/sphere4.png" width="480px" />
+              <figcaption align="middle">Size: 0.5</figcaption>
+            </tr>
+        </table>
+    </div>
+
+    <p align="middle">https://cal-cs184-student.github.io/sp22-project-webpages-malits/proj3-2/index.html</p>
+</div>
+</body>
 </html>
